# aces-sdl

./: .codex  .gitattributes  .gitignore  .ground-control.yaml  .mcp.json  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  SUPPORT.md  noxfile.py  pyproject.toml  sonar-project.properties  towncrier.toml
implementations/python/: README.md  pyproject.toml
implementations/python/src/aces/: __init__.py  _compat.py
implementations/python/src/aces/backends/: __init__.py  stubs.py
implementations/python/src/aces/cli/: __init__.py  main.py  sdl.py
implementations/python/src/aces/core/: __init__.py  scenarios.py
implementations/python/src/aces/core/runtime/: __init__.py  capabilities.py  compiler.py  conformance.py  contracts.py  control_plane.py  control_plane_api.py  control_plane_security.py  control_plane_store.py  manager.py  models.py  planner.py  protocols.py  registry.py
implementations/python/src/aces/core/sdl/: __init__.py  _base.py  _errors.py  _source.py  accounts.py  agents.py  composition.py  conditions.py  content.py  entities.py  features.py  infrastructure.py  instantiate.py  module_registry.py  nodes.py  objectives.py  orchestration.py  parser.py  relationships.py  scenario.py  scoring.py  validator.py  variables.py  vulnerabilities.py
implementations/python/src/aces/core/semantics/: __init__.py  assessment.py  objective_semantics.py  objectives.py  planner.py  workflow.py
implementations/python/tests/: paths.py  test_assurance_policy.py  test_authority_boundary.py  test_backend_conformance_cli.py  test_backend_manifest.py  test_backend_profiles.py  test_concept_authority.py  test_controlled_vocabularies.py  test_fm2_semantics.py  test_mcp_server.py  test_processor_manifest.py  test_reference_models.py  test_repo_policy_tools.py  test_requirement_governance.py  test_run_300_lifecycle.py  test_run_311_participant_episode_lifecycle.py  test_runtime_conformance.py  test_runtime_contracts.py  test_runtime_control_plane.py  test_runtime_control_plane_api.py  test_runtime_manager.py  test_runtime_models.py  test_runtime_planner.py  test_runtime_registry.py  test_scenarios.py  test_sdl_fuzz.py  test_sdl_models.py  test_sdl_module_registry.py  test_sdl_parser.py  test_sdl_realworld.py  test_sdl_stress.py  test_sdl_validator.py  test_sem_208_participant_behavior.py  test_sem_211_participant_action_semantics.py  test_sem_212_participant_attribution_semantics.py  test_sem_213_temporal_participant_semantics.py  test_sem_215_participant_outcome_interpretation.py  test_semantic_coverage.py  test_semantic_profiles.py  test_semantics_assessment.py  (+2 more)
research/primary/reference-ecosystems/ncr-deputy/deputy/: Cargo.toml
research/primary/reference-ecosystems/ncr-deputy/deputy-library/: Cargo.toml
research/primary/reference-ecosystems/ncr-deputy/deputy-library/src/: archiver.rs  constants.rs  lib.rs  lockfile.rs  package.rs  rest.rs  test.rs  validation.rs
research/primary/reference-ecosystems/ncr-deputy/deputy-library/src/project/: enums.rs  mod.rs
research/primary/reference-ecosystems/ncr-deputy/deputy-library/src/snapshots/: deputy_library__validation__tests__banner_type_package_is_parsed_and_passes_validation.snap  deputy_library__validation__tests__condition_type_package_is_parsed_and_passes_validation.snap  deputy_library__validation__tests__event_type_package_is_parsed_and_passes_validation.snap  deputy_library__validation__tests__exercise_type_package_is_parsed_and_passes_validation.snap  deputy_library__validation__tests__feature_type_package_is_parsed_and_passes_validation.snap  deputy_library__validation__tests__inject_type_package_is_parsed_and_passes_validation.snap  deputy_library__validation__tests__malware_type_package_is_parsed_and_passes_validation.snap  deputy_library__validation__tests__other_type_package_is_parsed_and_passes_validation.snap
research/primary/reference-ecosystems/ncr-deputy/deputy-package-server/: Cargo.toml  example-config.yml
research/primary/reference-ecosystems/ncr-deputy/deputy-package-server/assets/: default-production-config.yml
research/primary/reference-ecosystems/ncr-deputy/deputy-package-server/assets/maintainer-scripts/: postrm  preinst
research/primary/reference-ecosystems/ncr-deputy/deputy-package-server/assets/unit-scripts/: deputy-package-server.service
research/primary/reference-ecosystems/ncr-deputy/deputy-package-server/migrations/2022-11-02-134308_create_packages/: up.sql
research/primary/reference-ecosystems/ncr-deputy/deputy-package-server/migrations/2023-03-13-073756_remove_html_from_packages/: down.sql  up.sql
research/primary/reference-ecosystems/ncr-deputy/deputy-package-server/migrations/2023-03-13-084121_add_readme_path/: down.sql  up.sql
research/primary/reference-ecosystems/ncr-deputy/deputy-package-server/migrations/2023-04-18-154649_create_versions/: down.sql  up.sql
research/primary/reference-ecosystems/ncr-deputy/deputy-package-server/migrations/2023-04-24-070142_add_description/: down.sql  up.sql
research/primary/reference-ecosystems/ncr-deputy/deputy-package-server/src/: configuration.rs  constants.rs  errors.rs  lib.rs  main.rs  schema.rs
research/primary/reference-ecosystems/ncr-deputy/deputy-package-server/src/models/: apitoken.rs  mod.rs  (+2 more)
research/primary/reference-ecosystems/ncr-deputy/deputy-package-server/tests/: basic.rs  owner.rs  package.rs
research/primary/reference-ecosystems/ncr-deputy/deputy/assets/: deputy  git-server-docker.tar.xz
research/primary/reference-ecosystems/ncr-deputy/deputy/src/: client.rs  commands.rs  configuration.rs  constants.rs  executor.rs  helpers.rs  lib.rs  main.rs  progressbar.rs
research/primary/reference-ecosystems/ncr-deputy/deputy/tests/: basic.rs  checksum.rs  download.rs  info.rs  inspect.rs  list.rs  owner.rs  publish.rs
research/primary/reference-ecosystems/ncr-ranger/ranger/: Cargo.toml  changelog
research/primary/reference-ecosystems/ncr-ranger/ranger/src/: configuration.rs  constants.rs  errors.rs  lib.rs  logger.rs  main.rs  roles.rs  schema.rs
(+830 files in other folders)
