[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "aces-sdl"
version = "0.1.0"
description = "Backend-agnostic cyber range scenario description language and runtime."
requires-python = ">=3.11"
dependencies = [
    "typer>=0.12.0",
    "pydantic>=2.0.0",
    "rich>=13.0.0",
    "PyYAML>=6.0",
    "cryptography>=45.0.0",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.34.0",
    "sse-starlette>=2.0.0",
    "asyncssh>=2.17.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-mock>=3.12.0",
    "coverage>=7.0.0",
    "httpx>=0.27.0",
    "hypothesis>=6.0.0",
]

[project.scripts]
aces = "aces.cli.main:app"

[tool.hatch.build.targets.wheel]
packages = ["src/aces"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
markers = [
    "fuzz: property-based fuzz tests (run with: pytest -m fuzz)",
]
addopts = "-m 'not fuzz'"

[tool.coverage.run]
source = ["aces"]

[tool.coverage.report]
show_missing = true

[tool.coverage.xml]
output = "coverage.xml"
