[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "aces-sdl"
version = "0.2.0"
description = "Backend-agnostic cyber range scenario description language and runtime."
requires-python = ">=3.11"
dependencies = [
    "typer>=0.12.0",
    "pydantic>=2.0.0",
    "rich>=13.0.0",
    "PyYAML>=6.0",
    "cryptography>=45.0.0",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.34.0",
    "sse-starlette>=2.0.0",
    "asyncssh>=2.17.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-mock>=3.12.0",
    "coverage>=7.0.0",
    "httpx>=0.27.0",
    "hypothesis>=6.0.0",
]

[project.scripts]
aces = "aces.cli.main:app"

[tool.hatch.build.targets.wheel]
packages = [
    "src/aces",
    "packages/aces_contracts",
    "packages/aces_backend_protocols",
    "packages/aces_backend_stubs",
    "packages/aces_cli",
    "packages/aces_conformance",
    "packages/aces_processor",
    "packages/aces_sdl",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src", "packages"]
markers = [
    "fuzz: property-based fuzz tests (run with: pytest -m fuzz)",
]
addopts = "-m 'not fuzz'"

[tool.coverage.run]
source = [
    "aces",
    "aces_contracts",
    "aces_backend_protocols",
    "aces_backend_stubs",
    "aces_cli",
    "aces_conformance",
    "aces_processor",
    "aces_sdl",
]

[tool.coverage.report]
show_missing = true

[tool.coverage.xml]
output = "coverage.xml"

[tool.ruff]
target-version = "py311"
line-length = 120

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "UP",   # pyupgrade
    "B",    # flake8-bugbear
    "SIM",  # flake8-simplify
    "S",    # flake8-bandit (security)
]
ignore = [
    "S101",   # assert is fine in tests and dataclass contracts
    "S603",   # subprocess without shell=True is fine
    "S607",   # partial executable path is fine
    "E501",   # line length handled by formatter, not linter
    "UP042",  # (str, Enum) is the established pattern; StrEnum migration is separate
    "SIM102", # nested if merging — harms readability in complex conditionals
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["S101", "S105", "S106", "S108", "E402", "SIM105", "F841"]
"packages/aces_cli/**" = ["B008"]      # typer requires function calls in defaults
"packages/aces_processor/control_plane_api.py" = ["B008"]  # fastapi Depends() pattern
"packages/aces_processor/control_plane.py" = ["S112"]      # intentional exception suppression
"packages/aces_sdl/module_registry.py" = ["S310", "S202"]  # explicit OCI URL fetch and tarball extract
"packages/aces_sdl/validator.py" = ["F821"]                # string-quoted forward references in closures
