[package]
name = "deputy-package-server"
description = "Deputy package server is a digital library server meant for storing deputy packages"
version = "4.3.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[package.metadata.deb]
name = "deputy-package-server"
maintainer = "CR14 Developers <developers@cr14.ee"
copyright = "2022, CR14 <info@cr14.ee>"
license-file = ["../LICENSE", "4"]
extended-description = """\
Deputy package server is a digital library server meant for storing deputy packages."""
depends = "$auto, systemd"
section = "utility"
priority = "optional"
assets = [
  [
    "target/release/deputy-package-server",
    "/var/opt/deputy/bin/",
    "755",
  ],
  [
    "assets/default-production-config.yml",
    "/etc/opt/deputy/deputy-package-server/config.yml",
    "644",
  ],
]
maintainer-scripts = "assets/maintainer-scripts"
systemd-units = { unit-name = "deputy-package-server", unit-scripts = "assets/unit-scripts", enable = true }


[dependencies]
actix = "0.13"
actix-rt = "2"
actix-web = "4"
actix-files = "0.6"
actix-http = { version = "3", features = ["http2", "ws"] }
async-stream = "0.3"
anyhow = "1"
base64 = "0.22"
chrono = { version = "0.4", features = ["serde"] }
diesel = { version = "2", features = ["mysql", "r2d2", "chrono"] }
diesel_migrations = "2"
deputy-library = { path = "../deputy-library", default-features = false }
env_logger = "0.11"
flate2 = "1"
futures = "0.3"
futures-util = "0.3"
jsonwebtoken = "9"
get-port = { version = "4", optional = true }
insta = "1"
lazy_static = "1"
log = "0.4"
mime_guess = "2"
rand = "0.8"
regex = "1"
semver = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_with = "3"
serde_yaml = "0.9"
tar = { git = "https://github.com/npajkovsky/tar-rs", branch = "master" }
tempfile = "3"
thiserror = "1"
toml = "0.8"
tokio = { version = "1", features = [
  "sync",
  "macros",
  "time",
  "rt-multi-thread",
] }
urlencoding = "2"
uuid = { version = "1", features = ["v4", "serde"] }

[dev-dependencies]
deputy-package-server = { path = ".", features = ["test"] }

[features]
default = []
test = [
  "deputy-library/test",
  "tokio/sync",
  "tokio/macros",
  "tokio/time",
  "tokio/rt-multi-thread",
  "dep:get-port",
]
